@@ -248,7 +248,7 @@ public class DefaultLotroGame implements LotroGame {
                 if (_losers.size() + 1 == _allPlayers.size()) {
                     List<String> allPlayers = new LinkedList<>(_allPlayers);
                     allPlayers.removeAll(_losers.keySet());
-                    gameWon(allPlayers.get(0), "Last remaining player in game");
+                    gameWon(allPlayers.getFirst(), "Last remaining player in game");
                 }
             }
         }
